--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.idega.block.egov</groupId>
-    <artifactId>com.idega.block.egov</artifactId>
+    <groupId>com.idega.block.private</groupId>
+    <artifactId>com.idega.block.private</artifactId>
     <version>4.1.3-SNAPSHOT</version>
   </parent>
   <groupId>com.idega.webapp.custom</groupId>
@@ -192,8 +192,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
       <groupId>com.idega.block.egov</groupId>
       <artifactId>is.idega.idegaweb.egov.xformscase</artifactId>
     </dependency>
+    
+    <!-- Private modules -->
     <dependency>
-      <groupId>com.idega.block.egov</groupId>
+      <groupId>com.idega.block.private</groupId>
       <artifactId>com.idega.municipality</artifactId>
     </dependency>
   </dependencies>
