--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
   <parent>
     <groupId>com.idega.block.private</groupId>
     <artifactId>com.idega.block.private</artifactId>
-    <version>4.1.3-SNAPSHOT</version>
+    <version>5.0.0-SNAPSHOT</version>
   </parent>
   <groupId>com.idega.webapp.custom</groupId>
   <artifactId>munizapp</artifactId>
   <packaging>iwwar</packaging>
-  <version>4.1.3-SNAPSHOT</version>
+  <version>5.0.0-SNAPSHOT</version>
   <description>eGov application for municipalities</description>
   <name>Munizapp</name>
   <inceptionYear>2012</inceptionYear>
@@ -90,10 +90,6 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
-      <artifactId>com.idega.slide</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.webface</artifactId>
     </dependency>
     <dependency>
@@ -106,7 +102,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
-      <artifactId>org.apache.slide</artifactId>
+      <artifactId>com.idega.jackrabbit</artifactId>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
