--- a/pom.xml
+++ b/pom.xml
@@ -153,8 +153,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
     <dependency>
     	<groupId>com.idega.block.addon</groupId>
 		<artifactId>com.idega.block.beanshell</artifactId>
+	</dependency>
+    <dependency>
+    	<groupId>com.idega.block.addon</groupId>
+		<artifactId>com.idega.restful</artifactId>
     </dependency>
-        <dependency>
+    <dependency>
     	<groupId>com.idega.block.addon</groupId>
 		<artifactId>com.idega.mobile</artifactId>
     </dependency>
